[tool.poetry]
name = "amaterus-announce-image-downloader"
version = "0.1.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pysen = "^0.10.5"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.12.2"
mypy = "^1.7.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
